--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: mysql_demo
   
   datasource:
-    url: jdbc:mysql://localhost:3306/test_db
+    url: jdbc:mysql://localhost:3306/test_db?serverTimezone=UTC
     username: root
     password: RootMysql
     driver-class-name: com.mysql.cj.jdbc.Driver
